@@ -2,7 +2,7 @@
 
 LIB matroska
 {
-  PROJECT_VERSION 1.1.0
+  PROJECT_VERSION 1.1.1
 
   INCLUDE .
   EXPINCLUDE .
