@@ -1,3 +1,8 @@
+2011-06-12 robux4/mosu
+New 1.1.1 version:
+    - skip data from KaxBlockVirtual as it should not be used
+    - use semantic generated from the specs so there is no more possible mismatch
+
 2011-02-02 impulze
     * trunk/libmatroska/test/test9.cpp
     - also remove no longer needed tests for old/outdated/previous tag system
